<resources>
    <string name="app_name_placeholder">Ride %1$s</string>
    <string name="app_name_formatted_placeholder">Ride|%1$s</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="ride_request">Ride Request Type</string>
    <string name="earnings">Earnings</string>
    <string name="settings">Settings</string>
    <string name="empty" />

    <!--SettingsFragment-->
    <string name="edit_account">Edit Account</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
...
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <string name="text_weekly_earnings">Weekly Earnings</string>

    <string name="text_earnings">Earnings</string>
    <string name="text_date_delimiter">" - "</string>
    <string name="text_hours_online">HOURS ONLINE</string>
    <string name="text_trips">TRIPS</string>
    <string name="text_current_rating">CURRENT RATING</string>
...
    <string name="ride_cancelled_by_rider">%1$s has cancelled the ride.</string>
    <string name="ride_cancelled_by_rider_with_fee">%1$s has cancelled the ride. You will receive $%2$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_with_fee">Your ride has been cancelled. You will receive $%1$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_without_fee">Your ride has been cancelled.</string>
    <string name="ride_cancelled_by_admin">Ride is cancelled by administrator</string>
    <string name="text_contact_rider_dialog">How do you want to contact your rider?</string>
    <string name="text_daily_earnings">Daily Earnings</string>
    <string name="text_trips_header">Trips</string>
    <string name="text_your_earning">Your earning</string>
    <string name="text_ride_service_fee">%1$s Fee</string>
    <string name="text_total_fare">Total Fare</string>
    <string name="text_time_fare">Time Fare</string>
    <string name="text_distance_fare">Distance Fare</string>
...
    <string name="call_request_message">Your call has been initiated successfully, you should soon receive a call</string>

    <string name="inspection_sticker">Registration Sticker</string>

    <string name="menu_send">Send</string>
    <string name="contact_rider">Contact Rider</string>
    <string name="contact_support">Select an Issue</string>
    <string name="my_cars">My Cars</string>
    <string name="add_car">Add Car</string>
    <string name="update_sticker">Update %s</string>
    <string name="update_insurance">Update Insurance</string>
    <string name="update_car_photos">Update Car Photos</string>
    <string name="update_your_license">Update Your Driver License Photo</string>
...
