<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.rideaustin.utils.ListUtils" />

        <import type="java.util.List" />

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.rideaustin.ui.drawer.triphistory.forms.SupportFormViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F2F2">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/formTitle"
                    style="@style/RATextView.Driver.Header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@{viewModel.supportForm.title}"
                    android:textColor="@color/charcoalGrey"
                    tools:text="Contact my driver about a lost item" />


                <TextView
                    android:id="@+id/formBody"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@{viewModel.supportForm.body}"
                    android:textColor="#4A515C"
                    tools:text="The best way to retrieve an item you may have left in a vehicle is to call the driver. Here's how:\n\n1. Scroll down and enter the phone number you would like to be contacted at. Tap submit.\n\nIf you lost your personal phone, enter a friend's phone number instead.\n\n2. We'll call the number you enter to connect you directly with your driver's mobile number.\n\nIf your driver picks up and confirms that your item has been found, coordinate a mutually convenient time and place to meet for its return to you.\n\nPlease be considerate that your driver's personal schedule will be affected by taking time out to return your item to you.\n\nDrivers are independent contractors. Neither RideAustin nor drivers are responsible for the items left in a vehicle after a trip ends. We're here to help, but cannot guarantee that a driver has your item or can immediately deliver it to you." />

                <LinearLayout
                    android:id="@+id/fieldsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical"
                    android:visibility="@{!ListUtils.isEmpty(viewModel.supportForm.supportFields)}" />

                <Button
                    android:id="@+id/formAction"
                    style="@style/Button.RoundedBlueButton"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:enabled="@{viewModel.actionEnabled}"
                    android:onClick="@{viewModel::onActionClicked}"
                    android:text="@{viewModel.supportForm.actionTitle}"
                    android:visibility="@{!TextUtils.isEmpty(viewModel.supportForm.actionTitle)}"
                    tools:text="Submit" />
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/edit_picture_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />

    </android.support.design.widget.CoordinatorLayout>
</layout>