...
            style="@style/Toolbar.Base"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_daily_earnings" />

        </android.support.v7.widget.Toolbar>
...
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_trip_count"
                            style="@style/RATextView.MontserratBold.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@{viewModel.tripCount}"
                            tools:text="10" />
...
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/iv_week_indicator_margin"
                        android:text="@string/text_trips_header" />
                </LinearLayout>

                <com.rideaustin.ui.earnings.NonScrollableExpandableList
                    android:id="@+id/trips_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_trips_delimiter" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
...
