...
    <string name="city_tnc_fee_text">CITY TNC FEE</string>
    <string name="processing_fee_text">PROCESSING FEE</string>

    <string name="cant_process_image">We can\'t process your picture: %s</string>
    <string name="contact">Contact</string>

    <string name="text_contact_support">Contact Support</string>
    <string name="error_io_write_disk">Can\'t save file on disk. Please check if it\'s enough free disk space.</string>
    <string name="you_are_in_this_queue">You are in this queue</string>
    <string name="you_are_not_in_this_queue">You are not in this queue</string>

    <plurals name="stars">
        <item quantity="one">%d star</item>
...
    <string name="destination_marker">Destination Marker</string>
    <string name="prev_ride_marker">Prev Ride Marker</string>
    <string name="next_ride_marker">Next Ride Marker</string>
    <string name="eta_marker">Eta Marker:</string>
    <string name="eta_marker_with_eta">Eta Marker: %s</string>
    <string name="comment_hint">Additional comment for your driver…</string>
    <string name="field_required">This field is required.</string>

    <!-- edit picture -->
    <string name="edit_picture">Edit Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose From Library</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_photo">Please select photo</string>
    <string name="enter_value">Enter value</string>
    <string name="ride_upgrade_msg">Do you confirm an upgrade from: %1$s to: %2$s class?</string>
    <string name="my_location">My Location</string>

    <!-- ride upgrade -->
    <string name="priority_fare_text">PRIORITY FARE: %s</string>
...
